# agente-lazarus

./: .dockerignore  .env.example  .gitignore  README.md  chatbot.py  ejemplo.py  faq_grupo_lazarus.xlsx  pyproject.toml  rag_knowledge_base.py  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  postcreate.sh
.github/: copilot-instructions.md
docs/: semana1_parte1_presentacion.md  semana2_parte2_presentacion.md  semana3_parte1_demoday.md  semana3_parte1_presentacion.md
notebooks/: demo_etl.ipynb  faq_grupo_lazarus.xlsx  faq_limpio.csv
scripts/: etl_malo.py
src/lazarus_apps/: __init__.py  main.py  ui.py
